Add deployment channels
